update exception in all functions and fix logger formating and added audit logic and search filter for transaction and audit