@@ -4,26 +4,26 @@ import com.talent.expensemanager.model.AuditLog;
 import com.talent.expensemanager.repository.AuditLogRepository;
 import com.talent.expensemanager.response.AuditResponse;
 import com.talent.expensemanager.service.AuditService;
+import com.talent.expensemanager.utils.AuditSpecifications;
 import lombok.RequiredArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class AuditServiceImpl implements AuditService {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(AuditServiceImpl.class);
     private final AuditLogRepository auditLogRepository;
 
     @Override
     public void log(String action, String entityName, String entityId, String details, String performedBy) {
-        LOGGER.info("AuditLog SYSTEM : Recording action {} on {} is started.", action, entityName);
-
         AuditLog logEntry = AuditLog.builder()
                 .action(action)
                 .entityName(entityName)
@@ -32,40 +32,48 @@ public class AuditServiceImpl implements AuditService {
                 .performedBy(performedBy)
                 .timestamp(LocalDateTime.now())
                 .build();
-
         auditLogRepository.save(logEntry);
+    }
 
-        LOGGER.info("\nAuditLog SYSTEM : {} SUCCESS", action);
+    @Override
+    public void logError(String action, String details, String performedBy, String errorCode) {
+        AuditLog logEntry = AuditLog.builder()
+                .action("ERROR_" + action)
+                .entityName("SYSTEM_EXCEPTION")
+                .entityId(errorCode)
+                .details(details)
+                .performedBy(performedBy != null ? performedBy : "SYSTEM")
+                .timestamp(LocalDateTime.now())
+                .build();
+        auditLogRepository.save(logEntry);
+    }
+
+    @Override
+    public Page<AuditResponse> getAllLogs(String action, String performedBy, LocalDateTime start, LocalDateTime end, Pageable pageable) {
+        log.info("Searching audit logs - Action: {}, User: {}", action, performedBy);
+
+        Specification<AuditLog> spec = AuditSpecifications.buildSearchQuery(action, performedBy, start, end);
+        return auditLogRepository.findAll(spec, pageable).map(this::mapToResponse);
     }
 
     @Override
     public List<AuditResponse> getLogsByUser(String accountId) {
-        LOGGER.info("getLogsByUser SYSTEM : Fetching logs for user {}", accountId);
-
         return auditLogRepository.findByPerformedByOrderByTimestampDesc(accountId)
                 .stream()
+                .filter(audit -> !audit.getAction().startsWith("ERROR_")) // Hide system errors from users
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Override
-    public List<AuditResponse> getAllLogs() {
-        LOGGER.info("getAllLogs SYSTEM : Fetching all system logs");
-
-        return auditLogRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    private AuditResponse mapToResponse(AuditLog log) {
+    private AuditResponse mapToResponse(AuditLog auditLog) {
         return AuditResponse.builder()
-                .id(log.getId())
-                .action(log.getAction())
-                .entityName(log.getEntityName())
-                .entityId(log.getEntityId())
-                .details(log.getDetails())
-                .performedBy(log.getPerformedBy())
-                .timestamp(log.getTimestamp())
+                .id(auditLog.getId())
+                .action(auditLog.getAction())
+                .entityName(auditLog.getEntityName())
+                .entityId(auditLog.getEntityId())
+                .details(auditLog.getDetails())
+                .performedBy(auditLog.getPerformedBy())
+                .timestamp(auditLog.getTimestamp())
                 .build();
     }
 }
